--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~5.0.2"
+  },
+   "engines": {
+    "node": "16.15.1",
+    "npm": "8.11.0"
   }
 }
